Rounded inputs on mobiles possible fix

--- a/src/styles/EmailPanel.scss
+++ b/src/styles/EmailPanel.scss
@@ -37,10 +37,15 @@
       width: calc(100% - 20px);
       padding: 5px;
       border: none;
+      border-radius: 0;
       margin-bottom: 20px;
       background-color: $secondary-color;
       border-bottom: 1px solid$font-color-3;
       color: $font-color-3;
+    }
+
+    input[type="search"] {
+      -webkit-appearance: none;
     }
 
     textarea {
@@ -66,16 +71,3 @@
     }
   }
 }
-
-// @media (min-width: 500px) {
-//   .inputFields {
-//     width: fit-content;
-//     input {
-//       width: 500px;
-//     }
-
-//     textarea {
-//       width: 500px;
-//     }
-//   }
-// }
